Feat: Inclusão de Rotina para sumarização de resultados.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/test;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.url=jdbc:h2:file:./producao-db;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -20,3 +20,10 @@ springdoc.show-actuator=true
 cpf.integracao.url=http://localhost:9191/api/
 
 server.servlet.context-path=/api/v1
+
+#Kafka
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.group-id=groupPautas
+topic.name.producer=topico.pautas
